--- a/ConsumidorControl/src/main/resources/templates/indice.html
+++ b/ConsumidorControl/src/main/resources/templates/indice.html
@@ -12,7 +12,7 @@
         <h1>Lista de Individuos</h1>
         <div class="search-container">
             <form th:action="@{/buscarPorNombre}" method="get">
-                <input type="text" name="nombre" placeholder="Buscar por nombre..." />
+                <input required type="text" name="nombre" placeholder="Buscar por nombre..." />
                 <button type="submit">Buscar</button>
             </form>
         </div>
