--- a/ConsumidorControl/src/main/resources/templates/profesorf.html
+++ b/ConsumidorControl/src/main/resources/templates/profesorf.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Nuevo Profesor</title>
-    <link href="bootstrapprofes.css" rel="stylesheet">
+    <link href="static/bootstrapprofes.css" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
@@ -44,6 +44,6 @@
         <a href="/" class="btn btn-secondary">Cancelar</a>
     </form>
 </div>
-<script src="bootstrapprofes.js"></script>
+<script src="static/bootstrapprofes.js"></script>
 </body>
 </html>
