--- a/ConsumidorControl/src/main/resources/templates/verFormularios.html
+++ b/ConsumidorControl/src/main/resources/templates/verFormularios.html
@@ -12,9 +12,9 @@
         <main class="container">
             <h1>Formularios</h1>
             <ul class="list-group">
-                <li class="list-group-item"><a th:href="@{/alumnos/nuevoAlumno}">Alumno</a></li>
-                <li class="list-group-item">second</li>
-                <li class="list-group-item">third</li>
+                <li class="list-group-item"><a th:href="@{/alumnos/nuevoAlumno}">Formulario Alumno</a></li>
+                <li class="list-group-item"><a th:href="@{/individuos/nuevoIndividuo}">Formulario Individuo</a></li>
+                <li class="list-group-item"><a th:href="@{/horarios/nuevoHorario}">Formulario Horario</a></li>
             </ul>
 
         </main>
