--- a/ConsumidorControl/src/main/resources/templates/especialidades/verEspecialidad.html
+++ b/ConsumidorControl/src/main/resources/templates/especialidades/verEspecialidad.html
@@ -37,7 +37,7 @@
                         <option value="" disabled selected>Seleccione una sección</option>
                         <option value="1">1</option>
                         <option value="2">2</option>
-                        <option value="3" th:if="${idEspe > 6}">3</option>
+                        <option value="3" th:if="${idEspe >= 6}">3</option>
                     </select>
                 </div>
                 <button type="submit" class="btn btn-primary">Ver Alumnos</button>
