--- a/ConsumidorControl/src/main/resources/templates/plantilla/plantilla.html
+++ b/ConsumidorControl/src/main/resources/templates/plantilla/plantilla.html
@@ -20,7 +20,7 @@
                             <a class="nav-link" th:href="@{/verFormularios}">Formularios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Especialidades</a>
+                            <a class="nav-link" th:href="@{/verTablas}">Vistas</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" th:href="@{/individuos/}">Individuos</a>
