--- a/ConsumidorControl/src/main/resources/templates/verTablas.html
+++ b/ConsumidorControl/src/main/resources/templates/verTablas.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
-        <title>Formularios</title>
+        <title>Tablas</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -12,10 +12,11 @@
         <main class="container">
             <h1>Formularios</h1>
             <ul class="list-group">
-                <li class="list-group-item"><a th:href="@{/alumnos/nuevoAlumno}">Formulario Alumno</a></li>
-                <li class="list-group-item"><a th:href="@{/individuos/nuevoIndividuo}">Formulario Individuo</a></li>
-                <li class="list-group-item"><a th:href="@{/horarios/nuevoHorario}">Formulario Horario</a></li>
-                <li class="list-group-item"><a th:href="@{/profesores/nuevoProfesor}">Formulario Profesor</a></li>
+                <li class="list-group-item"><a th:href="@{/alumnos/}">Tabla Alumno</a></li>
+                <li class="list-group-item"><a th:href="@{/individuos/}">Tabla Individuo</a></li>
+                <li class="list-group-item"><a th:href="@{/horarios/}">Tabla Horario</a></li>
+                <li class="list-group-item"><a th:href="@{/profesores/}">Tabla Profesores</a></li>
+                <li class="list-group-item"><a th:href="@{/asistencias/}">Tabla Asistencias</a></li>
             </ul>
 
         </main>
