--- a/ConsumidorControl/src/main/resources/templates/verFormularios.html
+++ b/ConsumidorControl/src/main/resources/templates/verFormularios.html
@@ -16,6 +16,7 @@
                 <li class="list-group-item"><a th:href="@{/individuos/nuevoIndividuo}">Formulario Individuo</a></li>
                 <li class="list-group-item"><a th:href="@{/horarios/nuevoHorario}">Formulario Horario</a></li>
                 <li class="list-group-item"><a th:href="@{/profesores/nuevoProfesor}">Formulario Profesor</a></li>
+                <li class="list-group-item"><a th:href="@{/excel/subir-excel}">Formulario alumnado excel</a></li>
             </ul>
 
         </main>
