--- a/ConsumidorControl/src/main/resources/templates/plantilla/plantilla.html
+++ b/ConsumidorControl/src/main/resources/templates/plantilla/plantilla.html
@@ -14,6 +14,7 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+                
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
@@ -26,6 +27,37 @@
                             <a class="nav-link" th:href="@{/individuos/}">Individuos</a>
                         </li>
                     </ul>
+                    <div  class="collapse navbar-collapse" id="navbarSupportedContent">
+                        
+                        <ul class="navbar-nav ms-auto" sec:authorize="isAuthenticated()">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+                                User
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="/profile">Profile</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+
+                    <!-- Logout form for authenticated users -->
+                    <form sec:authorize="isAuthenticated()" method="post" action="/logout" class="d-inline ms-2">
+                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+                        <button type="submit" class="btn btn-danger">Logout</button>
+                    </form>
+
+                    <ul class="navbar-nav ms-auto" sec:authorize="!isAuthenticated()">
+                        <li class="nav-item">
+                            <a href="/register" class="btn btn-outline-primary me-2">Register</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="/login" class="btn btn-primary">Login</a>
+                        </li>
+                    </ul>
+                        
+                        
+                    </div>
+                    
                 </div>
             </nav>
         </header>
