--- a/ConsumidorControl/src/main/resources/templates/verDetalles.html
+++ b/ConsumidorControl/src/main/resources/templates/verDetalles.html
@@ -26,6 +26,7 @@
                             <th>Sección</th>
                             <th>Especialidad</th>
                             <th>Acciones</th>
+                            <th>hora llegada</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -39,6 +40,7 @@
                             <td>
                                 <p>Acción</p> <!-- Puedes agregar botones u opciones aquí -->
                             </td>
+                            <td th:text="${d.hora_presencia}">Muestra especialidad</td>
                         </tr>
                     </tbody>
                 </table>
