--- a/ConsumidorControl/src/main/resources/templates/plantilla/plantilla.html
+++ b/ConsumidorControl/src/main/resources/templates/plantilla/plantilla.html
@@ -26,6 +26,9 @@
                         <li class="nav-item">
                             <a class="nav-link" th:href="@{/individuos/}">Individuos</a>
                         </li>
+                       <li class="nav-item">
+                            <a class="nav-link" th:href="@{/verAsistenciasPorCurso}">Individuos</a>
+                        </li>
                     </ul>
                     <div  class="collapse navbar-collapse" id="navbarSupportedContent">
                         
