Ya anda el login

--- a/ConsumidorControl/src/main/resources/templates/formularios/formularioProfesor.html
+++ b/ConsumidorControl/src/main/resources/templates/formularios/formularioProfesor.html
@@ -24,6 +24,10 @@
                     <label for="cdi">CDI:</label>
                     <input type="number" class="form-control" id="cdi" th:field="*{cdi}" required>
                 </div>
+                <div class="form-group">
+                    <label for="cdi">Correo:</label>
+                    <input type="text" class="form-control" id="correo" th:field="*{correo}" required>
+                </div>
                 <button type="submit" class="btn btn-primary">Guardar</button>
                 <a href="/" class="btn btn-secondary">Cancelar</a>
             </form>
