--- a/ConsumidorControl/src/main/resources/templates/indice.html
+++ b/ConsumidorControl/src/main/resources/templates/indice.html
@@ -10,32 +10,35 @@
 <body>
     <!-- Navigation Bar -->
     <header th:replace="plantilla/plantilla :: encabezado"/>
+    
     <!-- Main Content -->
     <main class="container">
-        <div class="container">
+        <div class="container mt-4">
             <h1 th:if="${advertencia == null}">Bienvenido!</h1>
             <br th:if="${advertencia != null and !advertencia.empty}">
             <h2 th:if="${advertencia != null and !advertencia.empty}" th:text="${advertencia}"></h2>
             
-
-            <div class="jumbotron mt-4" th:if="${especialidades != null and !especialidades.empty}">
-                <h2>Especialidades</h1>
-                <br>
-
-                <ul th:each="especialidad : ${especialidades}" class="list-group" >
-                    <li class="list-group-item h5"><a th:href="@{/verEspecialidad/{idEspe} (idEspe = ${especialidad.id_especialidad}) }" th:text="${especialidad.nombre}"></a></li>
-                </ul>
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4" th:if="${especialidades != null and !especialidades.empty}">
+                <div th:each="especialidad : ${especialidades}" class="col">
+                    <a th:href="@{/verEspecialidad/{idEspe}(idEspe=${especialidad.id_especialidad})}" class="text-decoration-none">
+                        <div class="card text-center">
+                            <img th:src="@{'/images/esp' + ${especialidad.id_especialidad} + '.png'}" class="card-img-top mx-auto" alt="Especialidad Logo" style="width: 30%; height: 30%; object-fit: cover;">
+                        </div>
+                    </a>
+                </div>
             </div>
+            
             <div th:if="${especialidades == null or especialidades.empty}">
-                <h2>No hay nada por aqui...</h2>
-            </div>    
+                <h2>No hay nada por aquí...</h2>
+            </div>
         </div>
     </main>
+    
     <!-- Footer -->
     <footer th:replace="plantilla/plantilla :: piedepagina"/>
 
     <!-- Bootstrap JS, Popper.js, and jQuery -->
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
 </html>
