--- a/ConsumidorControl/src/main/resources/templates/plantilla/plantilla.html
+++ b/ConsumidorControl/src/main/resources/templates/plantilla/plantilla.html
@@ -10,7 +10,7 @@
         <header th:fragment="encabezado">
         
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" th:href="@{/}">S.E.E.S</a>
+                <a class="navbar-brand" th:href="@{/}"><img th:src="@{/images/ctn_logo.png}" alt="alt" width="50" height="50"/></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -27,7 +27,7 @@
                             <a class="nav-link" th:href="@{/individuos/}">Individuos</a>
                         </li>
                        <li class="nav-item">
-                            <a class="nav-link" th:href="@{/verAsistenciasPorCurso}">Individuos</a>
+                            <a class="nav-link" th:href="@{/verAsistenciasPorCurso}">Buscar asistencias</a>
                         </li>
                     </ul>
                     <div  class="collapse navbar-collapse" id="navbarSupportedContent">
