--- a/ConsumidorControl/src/main/resources/templates/verAsistenciaCurso.html
+++ b/ConsumidorControl/src/main/resources/templates/verAsistenciaCurso.html
@@ -7,31 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <!-- Formulario para seleccionar curso, sección y fecha -->
-    <form th:action="@{/verEspecialidad/{idEspe}/alumnos(idEspe=${especialidad.id_especialidad})}" method="get">
-        <div class="mb-3">
-            <label for="curso" class="form-label">Curso</label>
-            <select class="form-select" id="curso" name="curso" required>
-                <option value="" disabled selected>Seleccione un curso</option>
-                <option value="PRIMERO">Primero</option>
-                <option value="SEGUNDO">Segundo</option>
-                <option value="TERCERO">Tercero</option>
-            </select>
-        </div>
-        <div class="mb-3">
-            <label for="seccion" class="form-label">Sección</label>
-            <select class="form-select" id="seccion" name="seccion" required>
-                <option value="" disabled selected>Seleccione una sección</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3" th:if="${idEspe >= 6}">3</option>
-            </select>
-        </div>
-        <div class="mb-3">
-            <label for="fecha" class="form-label">Fecha</label>
-            <input type="date" class="form-control" id="fecha" name="fecha" required>
-        </div>
-        <button type="submit" class="btn btn-primary">Ver Alumnos</button>
-    </form>
+    <header th:replace="plantilla/plantilla :: encabezado"/>
+    
+    
+    
+    <footer th:replace="plantilla/plantilla :: piedepagina"/>
 </body>
 </html>
