--- a/ConsumidorControl/src/main/resources/templates/verDetalles.html
+++ b/ConsumidorControl/src/main/resources/templates/verDetalles.html
@@ -5,6 +5,19 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <style>
+    /* Estilo para aumentar el tamaño del checkbox */
+    .form-check-input {
+        width: 1.5em; /* Ajusta el tamaño según sea necesario */
+        height: 1.34em; /* Ajusta el tamaño según sea necesario */
+    }
+    .checkbox-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+        </style>
+
     </head>
     <body>
         <header th:replace="plantilla/plantilla :: encabezado"/>
@@ -19,6 +32,7 @@
                 <table class="table table-striped table-hover table-sm table-bordered">
                     <thead>
                         <tr>
+                            <th>Esta presente</th>
                             <th>Nombre</th>
                             <th>Apellido</th>
                             <th>CDI</th>
@@ -26,21 +40,30 @@
                             <th>Sección</th>
                             <th>Especialidad</th>
                             <th>Acciones</th>
-                            <th>hora llegada</th>
+                            <th>Hora de llegada</th>
+
                         </tr>
                     </thead>
                     <tbody>
-                        <tr th:each="d : ${detalles}">
+                        <tr th:each="d : ${detalles}" th:classappend="${d.esta_presente} ? 'table-success'">
+                            <td th:text="${d.esta_presente ? 'Sí' : 'No'}">Presencia</td>
                             <td th:text="${d.alumno.nombre}">Muestra nombre</td>
                             <td th:text="${d.alumno.apellido}">Muestra apellido</td>
-                            <td th:text="${d.alumno.cdi}">Muestra CDI</td> <!-- Cambiado de edad a CDI -->
-                            <td th:text="${d.alumno.curso}">Muestra curso</td> <!-- Cambiado de correo a Curso -->
-                            <td th:text="${d.alumno.seccion}">Muestra sección</td> <!-- Cambiado de teléfono a Sección -->
-                            <td th:text="${d.alumno.especialidad.nombre}">Muestra especialidad</td> <!-- Cambiado de teléfono a Especialidad -->
+                            <td th:text="${d.alumno.cdi}">Muestra CDI</td>
+                            <td th:text="${d.alumno.curso}">Muestra curso</td>
+                            <td th:text="${d.alumno.seccion}">Muestra sección</td>
+                            <td th:text="${d.alumno.especialidad.nombre}">Muestra especialidad</td>
                             <td>
-                                <p>Acción</p> <!-- Puedes agregar botones u opciones aquí -->
+                                <form th:action="@{/detalle-asistencias/actualizarPresencia/{idAsistencia}/{idAlumno}(idAsistencia=${d.asistencia.id_asistencia}, idAlumno=${d.alumno.id_alumno})}" method="post" class="d-inline">
+                                    <div class="form-check form-switch checkbox-container">
+                                        <input type="checkbox" name="esta_presente" th:checked="${d.esta_presente}" onchange="this.form.submit()" class="form-check-input" />
+                                    </div>
+                                </form>
                             </td>
-                            <td th:text="${d.hora_presencia}">Muestra especialidad</td>
+
+                            <td th:text="${d.hora_presencia}">Muestra hora de llegada</td>
+    
+                            
                         </tr>
                     </tbody>
                 </table>
@@ -48,6 +71,8 @@
             <div th:if="${detalles == null or detalles.empty}" class="text-center">
                 <p>La lista no contiene datos.</p>
             </div>
+            <a th:href="@{/excel/exportarAsistenciasExcel/{idAsis}(idAsis=${detalleCabecera.asistencia.id_asistencia})}" class="btn btn-success my-4">Exportar a Excel</a>
+
         </main>
         <footer th:replace="plantilla/plantilla :: piedepagina"/>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
