--- a/ConsumidorControl/src/main/resources/templates/indice.html
+++ b/ConsumidorControl/src/main/resources/templates/indice.html
@@ -6,6 +6,31 @@
     <title>Inicio App</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        .card {
+            width: 100%;
+            height: 100%; /* Hacer que las tarjetas ocupen todo el contenedor */
+        }
+        .card-img-top {
+            width: 80%; /* Ajustar el tamaño de la imagen */
+            height: auto; /* Mantener la proporción de la imagen */
+            object-fit: cover;
+            margin-top: 10px; /* Agregar margen superior si es necesario */
+        }
+        .col {
+            display: flex;
+            justify-content: center; /* Centrar el contenido horizontalmente */
+            align-items: center; /* Centrar el contenido verticalmente */
+        }
+        .card {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            padding: 10px; /* Ajustar el padding */
+            border: 1px solid #ddd; /* Borde opcional */
+        }
+    </style>
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -18,11 +43,14 @@
             <br th:if="${advertencia != null and !advertencia.empty}">
             <h2 th:if="${advertencia != null and !advertencia.empty}" th:text="${advertencia}"></h2>
             
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4" th:if="${especialidades != null and !especialidades.empty}">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-4" th:if="${especialidades != null and !especialidades.empty}">
                 <div th:each="especialidad : ${especialidades}" class="col">
                     <a th:href="@{/verEspecialidad/{idEspe}(idEspe=${especialidad.id_especialidad})}" class="text-decoration-none">
                         <div class="card text-center">
-                            <img th:src="@{'/images/esp' + ${especialidad.id_especialidad} + '.png'}" class="card-img-top mx-auto" alt="Especialidad Logo" style="width: 30%; height: 30%; object-fit: cover;">
+                            <img th:src="@{'/images/esp' + ${especialidad.id_especialidad} + '.png'}" class="card-img-top" alt="Especialidad Logo">
+                            <div class="card-body">
+                                <p class="card-text" th:text="${especialidad.nombre}"></p>
+                            </div>
                         </div>
                     </a>
                 </div>
