--- a/ConsumidorControl/src/main/resources/templates/verAlumnos.html
+++ b/ConsumidorControl/src/main/resources/templates/verAlumnos.html
@@ -23,6 +23,7 @@
                 <table class="table table-striped table-hover table-sm table-bordered">
                     <thead>
                         <tr>
+                            <th>id</th>
                             <th>Nombre</th>
                             <th>Apellido</th>
                             <th>Curso</th>
@@ -34,6 +35,7 @@
                     </thead>
                     <tbody>
                         <tr th:each="a : ${alumnos}">
+                            <td th:text="${a.id_alumno}">Muestra id</td>
                             <td th:text="${a.nombre}">Muestra nombre</td>
                             <td th:text="${a.apellido}">Muestra apellido</td>
                             <td th:text="${a.curso}">Muestra curso</td>
