--- a/ConsumidorControl/src/main/resources/templates/formularios/profesorf.html
+++ b/ConsumidorControl/src/main/resources/templates/formularios/profesorf.html
@@ -3,28 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Nuevo Profesor</title>
-    <link href="static/bootstrapprofes.css" rel="stylesheet">
+    <link rel="stylesheet" href="static/bootstrapprofes.css" />
+
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
-        <a class="navbar-brand" href="#">S.E.E.S</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Formularios</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Especialidades</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Individuos</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    <header th:replace="plantilla/plantilla :: encabezado"/>
 <h2 class="mt-5">Nuevo Profesor</h2>
 <div class="container">
     <form th:action="@{/profesores/guardar}" th:object="${profesor}" method="post" class="mt-3">
@@ -45,5 +28,6 @@
     </form>
 </div>
 <script src="static/bootstrapprofes.js"></script>
+<footer th:replace="plantilla/plantilla :: piedepagina"/>
 </body>
 </html>
