--- a/ConsumidorControl/src/main/resources/templates/verAsistencias.html
+++ b/ConsumidorControl/src/main/resources/templates/verAsistencias.html
@@ -21,8 +21,8 @@
                         <th>Profesor</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr th:each="asistencia : ${asistencias}">
+                <tbody >
+                    <tr th:each="asistencia : ${asistencias}" th:href="@{/detalle-asistencias/verDetalles/{idAsistencia} (idAsistencia = ${asistencia.id_asistencia}) }" >
                         <td>
                             <a th:href="@{/detalle-asistencias/verDetalles/{idAsistencia} (idAsistencia = ${asistencia.id_asistencia}) }" class="link-row" 
                                th:text="${asistencia.fecha}">Fecha</a>
@@ -52,3 +52,4 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>        
     </body>
 </html>
+
