modifique los html para que determinados usuarios vean o no botones agregue que los admins vean las asistencias de hoy de un verAsistenciaCurso modifique el formulario de alumno para que solo admita numeros modifique la vista de ver cursos

--- a/ConsumidorControl/src/main/resources/templates/verAlumnos.html
+++ b/ConsumidorControl/src/main/resources/templates/verAlumnos.html
@@ -30,7 +30,7 @@
                             <th>Seccion</th>
                             <th>Especialidad</th>
                             <th>CDI</th>
-                            <th>Acciones</th>
+                            <th sec:authorize="hasRole('ADMIN')">Acciones</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -42,9 +42,9 @@
                             <td th:text="${a.seccion}">Muestra seccion</td>
                             <td th:text="${a.especialidad.nombre}">Muestra especialidad</td>
                             <td th:text="${a.cdi}"></td>
-                            <td>
+                            <td sec:authorize="hasRole('ADMIN')">
                                 <a th:href="@{/alumnos/editarAlumno/} + ${a.id_alumno}" class="btn btn-sm btn-warning">Editar</a>
-                                <a th:href="@{/alumnos/eliminarAlumno/{idAlumno} (idAlumno=${a.id_alumno}) }" class="btn btn-sm btn-danger">Eliminar</a>
+                                <a th:href="@{/alumnos/eliminarAlumno/{idAlumno} (idAlumno=${a.id_alumno}) }" class="btn btn-sm btn-danger">Dar de baja</a>
                             </td>
                         </tr>
                     </tbody>
