--- a/ConsumidorControl/src/main/resources/templates/plantilla/plantilla.html
+++ b/ConsumidorControl/src/main/resources/templates/plantilla/plantilla.html
@@ -17,7 +17,7 @@
                 
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item">
+                        <li class="nav-item" sec:authorize="hasAnyRole('ADMIN', 'PROFESOR')">
                             <a class="nav-link" th:href="@{/verFormularios}">Formularios</a>
                         </li>
                         <li class="nav-item">
@@ -26,9 +26,7 @@
                         <li class="nav-item">
                             <a class="nav-link" th:href="@{/individuos/}">Individuos</a>
                         </li>
-                       <li class="nav-item">
-                            <a class="nav-link" th:href="@{/verAsistenciasPorCurso}">Buscar asistencias</a>
-                        </li>
+
                     </ul>
                     <div  class="collapse navbar-collapse" id="navbarSupportedContent">
                         
