--- a/ConsumidorControl/src/main/resources/templates/verAsistenciaCurso.html
+++ b/ConsumidorControl/src/main/resources/templates/verAsistenciaCurso.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     <header th:replace="plantilla/plantilla :: encabezado"/>
-    
+    <ul th:if="${!asistencias.empty or asistencias != null}">
+        <li th:each="a : ${asistencias}">
+            <a th:href="@{/detalle-asistencias/verDetalles/{idAsistencia} (idAsistencia = ${a.id_asistencia}) }" th:text="${a.fecha} + ' - ' + ${a.horario.materia.nombre}"></a>
+        </li>
+    </ul>
+
+
     
     
     <footer th:replace="plantilla/plantilla :: piedepagina"/>
