--- a/ConsumidorControl/src/main/resources/templates/verDetalles.html
+++ b/ConsumidorControl/src/main/resources/templates/verDetalles.html
@@ -70,7 +70,7 @@
 
         </style>
     </head>
-    <body>
+    <body class="container">
         <header th:replace="plantilla/plantilla :: encabezado"/>
         <main class="container">
             <h1 class="text-center my-4">Lista de Asistencias</h1>
