--- a/ConsumidorControl/src/main/resources/templates/errores/403.html
+++ b/ConsumidorControl/src/main/resources/templates/errores/403.html
@@ -3,20 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <title>Access Denied</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            margin-top: 50px;
+            background-color: #f8f9fa;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            height: 100vh;
         }
+
+        .container {
+            max-width: 600px;
+            margin: 0 auto;
+        }
+
         h1 {
             color: #d9534f;
+            font-size: 3rem;
+            margin-bottom: 1rem;
+        }
+
+        p {
+            font-size: 1.25rem;
+            margin-bottom: 2rem;
+        }
+
+        .btn-primary {
+            background-color: #007bff;
+            border-color: #007bff;
+            padding: 0.75rem 1.5rem;
+            font-size: 1rem;
+            text-decoration: none;
+            color: white;
+        }
+
+        .btn-primary:hover {
+            background-color: #0056b3;
+            border-color: #004085;
+        }
+
+        .error-image {
+            max-width: 150px;
+            margin-bottom: 1rem;
         }
     </style>
 </head>
 <body>
-    <h1>Access Denied</h1>
-    <p>You do not have permission to access this page.</p>
-    <a th:href="@{/}" class="btn btn-primary">Go to Home</a>
+    <div class="container">
+        <img src="/images/no.jpeg" alt="Access Denied" class="error-image">
+        <h1>Acceso Denegado</h1>
+        <p>No tienes permiso para entrar a esta pagina.</p>
+        <a th:href="@{/}" class="btn btn-primary">Ir a inicio</a>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
+
