--- a/ConsumidorControl/src/main/resources/templates/errores/error.html
+++ b/ConsumidorControl/src/main/resources/templates/errores/error.html
@@ -3,20 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <title>Error</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            margin-top: 50px;
+            background-color: #f8f9fa;
+            margin-top: 5%;
         }
+
+        .container {
+            max-width: 600px;
+            margin: 0 auto;
+        }
+
         h1 {
             color: #d9534f;
+            font-size: 4rem;
+            margin-bottom: 1rem;
+        }
+
+        p {
+            font-size: 1.25rem;
+            margin-bottom: 2rem;
+        }
+
+        .btn-primary {
+            background-color: #007bff;
+            border-color: #007bff;
+            padding: 0.75rem 1.5rem;
+            font-size: 1rem;
+        }
+
+        .btn-primary:hover {
+            background-color: #0056b3;
+            border-color: #004085;
+        }
+
+        .error-image {
+            max-width: 150px;
+            margin-bottom: 1rem;
         }
     </style>
 </head>
 <body>
-    <h1>Oops! Something went wrong.</h1>
-    <p>We're sorry, but an unexpected error has occurred.</p>
-    <a th:href="@{/}" class="btn btn-primary">Go to Home</a>
+    <div class="container">
+        <img src="/images/warning.png" alt="Error" class="error-image">
+        <h1>Oops! Algo salio mal.</h1>
+        <p>Lo sentimos, pero se ha producido un error inesperado.</p>
+        <a th:href="@{/}" class="btn btn-primary">Ir al inicio</a>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
+
