--- a/ConsumidorControl/src/main/resources/templates/verAlumnos.html
+++ b/ConsumidorControl/src/main/resources/templates/verAlumnos.html
@@ -5,8 +5,28 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <style>
+        /* Estilo del contenedor principal para asegurar que el footer esté al pie de la página */
+        html, body {
+            height: 100%;
+            margin: 0;
+        }
+        .wrapper {
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+        }
+        .content {
+            flex: 1;
+        }
+        .footer {
+            background-color: #f8f9fa;
+            padding: 1rem;
+            text-align: center;
+        }
+    </style>
     </head>
-    <body>
+    <body class="container">
         <header th:replace="plantilla/plantilla :: encabezado"/>
         <main class="container">
             <h1 class="text-center">Lista de Alumnos</h1>
@@ -54,7 +74,7 @@
                 <p>La lista no contiene datos.</p>
             </div>
         </main>
-        <footer th:replace="plantilla/plantilla :: piedepagina"/>
+        <footer class="footer"th:replace="plantilla/plantilla :: piedepagina"/>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     </body>
