--- a/ConsumidorControl/src/main/resources/templates/verAsistencias.html
+++ b/ConsumidorControl/src/main/resources/templates/verAsistencias.html
@@ -7,7 +7,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" th:href="@{/style2.css}"/>
     </head>
-    <body>
+    <body class="container">
         <header th:replace="plantilla/plantilla :: encabezado"/>  
         <main class="container">
         <div th:if="${asistencias != null and !asistencias.empty}">
